tests/ui/issues/issue-39089.stderr
error: expected a trait, found type
  --> $DIR/issue-39089.rs:1:10
   |
LL | fn f<T: ?for<'a> Sized>() {}
   |          ^^^^^^^^^^^^^

error: aborting due to 1 previous error

