tests/ui/issues/issue-39089.rs
fn f<T: ?for<'a> Sized>() {}
//~^ ERROR expected a trait, found type

fn main() {}
